# Shiro-Chat-Bot

./: README.md  main.cpp
SHIROOO/: CMakeLists.txt  bg.qrc  shiro.cpp  shiro.h  shiro.ui
SHIROOO/SHIROOO/: main.cpp  rec.qrc  res2.qrc  shiro.cpp  shiro.ui
